# ruuvi-gateway-client

./: CHANGELOG.md  LICENSE  README.md  developer_notes.md  example.py  setup.cfg  setup.py
src/ruuvi_gateway/: gateway.py  parser.py  types.py
src/ruuvi_gateway_client/: gateway.py
tests/: test_parser.py
