[metadata]
name = ruuvi-gateway-client
version = 0.0.1
author = Tomi Tuhkanen
author_email = tomi.tuhkanen@iki.fi
description = Client for Ruuvi Gateway
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ruuvi-friends/simple-ruuvigateway
project_urls =
    Bug Tracker = https://github.com/ruuvi-friends/simple-ruuvigateway/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    aiohttp
    result
    ruuvi_decoders
test_suite = node.collector
tests_require =
    nose
    mock

[options.packages.find]
where = src