[metadata]
name = ruuvi-gateway-client
version = 0.1.0
author = Tomi Tuhkanen
author_email = tomi.tuhkanen@iki.fi
description = Client for Ruuvi Gateway
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ruuvi-friends/ruuvi-gateway-client
project_urls =
    Bug Tracker = https://github.com/ruuvi-friends/ruuvi-gateway-client/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    aiohttp
    result
    ruuvi_decoders

[options.packages.find]
where = src